##############
# CHANGE LOG #
##############

4.1.0 -- fixed bugs in backup:
           backup does not skip uploads when asked
           backup creates tar bomb
           backup cannot compress if low RAM
         cleaned up code style
         variable names are more understandable
         log output and stdout are now the same text
         output is a bit more verbose

4.0.2 -- fixed bugs with duration in password function
         fixed orphaned WP install message
         fixed SQL syntax error in -w -v
         changed to Absurd License 2

4.0.1 -- fixed a bug in backups that was preventing compression despite flag
         fixed a bug in maldet detection for verify
         added "PARENTOFGIVEN" as an option for backup location

4.0.0 -- added proper option flags
         changed behavior of temp password function to add support for permanent
         added view option to temp password (list users)
         added parameter order independence
         configuration options moved to config file
         made temp directory configurable
         removed need for rpl
         added make file for installation
         added default for current directory on some options
         makefile for installation
         SSH option removed due to issues with php's libssh2
         added the settings function
         changed default files permissions
         added the find function
         added the mangle function
         update will now optionally update plugins
         wpm.sh was way too long, split it into many files
         $r is now declared globally so that logs are easier to follow
           the idea being that when one function calls another you
           know that it was all part of one invocation
         fixserial.php is now fixserial.sh
         added verify
         refactored many different sections
         changed to ISC license

3.1.0 -- added rename
         added housekeeping
         changed changedomain to copy