@@ -3,21 +3,11 @@
   <component name="ChangeListManager">
     <list default="true" id="b3e5a3c6-5a4b-4197-979d-23dbf0755274" name="Default Changelist" comment="">
       <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/LICENSE" beforeDir="false" afterPath="$PROJECT_DIR$/LICENSE" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/Makefile" beforeDir="false" afterPath="$PROJECT_DIR$/Makefile" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/README.md" beforeDir="false" afterPath="$PROJECT_DIR$/README.md" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/bin/wpm.sh" beforeDir="false" afterPath="$PROJECT_DIR$/bin/wpm.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-backup.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-backup.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-copy.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-copy.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-delete.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-delete.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-find.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-find.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-install.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-install.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-mangle.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-mangle.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-password.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-password.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-permissions.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-permissions.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-rename.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-rename.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-settings.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-settings.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-update.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-update.sh" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/lib/wpm-verify.inc" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-verify.sh" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/etc/wpm/changelog.txt" beforeDir="false" afterPath="$PROJECT_DIR$/etc/wpm/changelog.txt" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/lib/updater.pl" beforeDir="false" afterPath="$PROJECT_DIR$/lib/updater.pl" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/lib/wpm-verify.sh" beforeDir="false" afterPath="$PROJECT_DIR$/lib/wpm-verify.sh" afterDir="false" />
     </list>
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
@@ -41,9 +31,10 @@
   </component>
   <component name="PropertiesComponent">
     <property name="ASKED_SHARE_PROJECT_CONFIGURATION_FILES" value="true" />
+    <property name="RunOnceActivity.OpenProjectViewOnStart" value="true" />
     <property name="RunOnceActivity.ShowReadmeOnStart" value="true" />
     <property name="SHARE_PROJECT_CONFIGURATION_FILES" value="true" />
-    <property name="last_opened_file_path" value="$PROJECT_DIR$" />
+    <property name="last_opened_file_path" value="$PROJECT_DIR$/../systembackup" />
     <property name="settings.editor.selected.configurable" value="preferences.editor" />
   </component>
   <component name="SvnConfiguration">
@@ -78,35 +69,48 @@
       <option name="project" value="LOCAL" />
       <updated>1587046107157</updated>
     </task>
-    <option name="localTasksCounter" value="4" />
+    <task id="LOCAL-00004" summary="inc files renamed to sh files&#10;make uninstall now uses wildcard globbing in $(LIB)">
+      <created>1587752347786</created>
+      <option name="number" value="00004" />
+      <option name="presentableId" value="LOCAL-00004" />
+      <option name="project" value="LOCAL" />
+      <updated>1587752347786</updated>
+    </task>
+    <option name="localTasksCounter" value="5" />
     <servers />
   </component>
   <component name="VcsManagerConfiguration">
     <MESSAGE value="attempt to fix bug with backup -s" />
     <MESSAGE value="date modified update" />
     <MESSAGE value="License change to Absurd License 2&#10;Two potential bug fixes in -b&#10;Exit code from try function changed to 1" />
-    <option name="LAST_COMMIT_MESSAGE" value="License change to Absurd License 2&#10;Two potential bug fixes in -b&#10;Exit code from try function changed to 1" />
+    <MESSAGE value="inc files renamed to sh files&#10;make uninstall now uses wildcard globbing in $(LIB)" />
+    <option name="LAST_COMMIT_MESSAGE" value="inc files renamed to sh files&#10;make uninstall now uses wildcard globbing in $(LIB)" />
   </component>
   <component name="WindowStateProjectService">
     <state x="1139" y="486" key="#com.intellij.fileTypes.FileTypeChooser" timestamp="1587045550449">
       <screen x="0" y="23" width="2560" height="1337" />
     </state>
     <state x="1139" y="486" key="#com.intellij.fileTypes.FileTypeChooser/0.23.2560.1337@0.23.2560.1337" timestamp="1587045550449" />
-    <state x="1040" y="277" key="CommitChangelistDialog2" timestamp="1587046106999">
+    <state x="1040" y="277" key="CommitChangelistDialog2" timestamp="1587752347612">
       <screen x="0" y="23" width="2560" height="1337" />
     </state>
-    <state x="1040" y="277" key="CommitChangelistDialog2/0.23.2560.1337@0.23.2560.1337" timestamp="1587046106999" />
+    <state x="1040" y="277" key="CommitChangelistDialog2/0.23.2560.1337@0.23.2560.1337" timestamp="1587752347612" />
+    <state x="844" y="315" width="424" height="490" key="FileChooserDialogImpl" timestamp="1588354548888">
+      <screen x="0" y="0" width="2560" height="1406" />
+    </state>
+    <state x="844" y="315" width="424" height="490" key="FileChooserDialogImpl/0.0.2560.1406@0.0.2560.1406" timestamp="1588354548888" />
     <state x="764" y="350" key="SettingsEditor" timestamp="1587751929578">
       <screen x="0" y="23" width="2560" height="1337" />
     </state>
     <state x="764" y="350" key="SettingsEditor/0.23.2560.1337@0.23.2560.1337" timestamp="1587751929578" />
-    <state x="995" y="415" key="Vcs.Push.Dialog.v2" timestamp="1587046110938">
+    <state x="995" y="415" key="Vcs.Push.Dialog.v2" timestamp="1587752356141">
       <screen x="0" y="23" width="2560" height="1337" />
     </state>
-    <state x="995" y="415" key="Vcs.Push.Dialog.v2/0.23.2560.1337@0.23.2560.1337" timestamp="1587046110938" />
-    <state x="1058" y="632" key="com.intellij.openapi.vcs.update.UpdateOrStatusOptionsDialogupdate-v2" timestamp="1587739116360">
-      <screen x="0" y="23" width="2560" height="1337" />
+    <state x="995" y="415" key="Vcs.Push.Dialog.v2/0.23.2560.1337@0.23.2560.1337" timestamp="1587752356141" />
+    <state x="1058" y="640" width="453" height="182" key="com.intellij.openapi.vcs.update.UpdateOrStatusOptionsDialogupdate-v2" timestamp="1588354779012">
+      <screen x="0" y="0" width="2560" height="1406" />
     </state>
+    <state x="1058" y="640" width="453" height="182" key="com.intellij.openapi.vcs.update.UpdateOrStatusOptionsDialogupdate-v2/0.0.2560.1406@0.0.2560.1406" timestamp="1588354779012" />
     <state x="1058" y="632" key="com.intellij.openapi.vcs.update.UpdateOrStatusOptionsDialogupdate-v2/0.23.2560.1337@0.23.2560.1337" timestamp="1587739116360" />
   </component>
 </project>
